[metadata]
name = fbpscheduler
version = 0.0.1
author = Eric Huan
author_email = erichuan@hotmail.com
description = A base version of the scheduler to work off of. Intended to stay private and refactored for public release.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/heretate/FBPScheduler
project_urls =
    Bug Tracker = https://github.com/heretate/FBPScheduler/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src